--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.12",
+    "classnames": "^2.5.1",
     "electron-squirrel-startup": "^1.0.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.3.0",
     "tailwindcss": "^4.0.12"
   }
 }
