--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "lapse",
-  "productName": "lapse",
+  "name": "posture",
+  "productName": "posture",
   "version": "0.0.1",
-  "description": "An app to record screen in time-lapse",
+  "description": "An app to help you to correct posture",
   "main": ".webpack/main",
   "scripts": {
     "dev": "electron-forge start",
